--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node/Express/MySQL web application for True Legacy Homes (Estate Sales) Created 8/8/2021 ==================================================================== ====================================================================",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon -w ./src -i ./src/public/ -e '*' -x 'rm -rf dist/* && tsc && node dist/app'"
   },
   "author": "",
   "license": "ISC",
@@ -15,14 +15,14 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-openid-connect": "^2.5.0",
-    "http-errors": "^1.7.2",
+    "express-openid-connect": "^2.5.1",
+    "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.13"
   },
   "devDependencies": {},
   "repository": {
