--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^16.10.9",
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
@@ -22,7 +23,8 @@
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {},
   "repository": {
