--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^16.11.1",
+    "@types/node": "^16.11.2",
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^10.0.0",
@@ -22,7 +22,8 @@
     "mongodb": "^4.1.3",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.13",
+    "nodemon": "^2.0.14",
+    "source-map-support": "^0.5.20",
     "typescript": "^4.4.4"
   },
   "devDependencies": {},
